# actions-toolkit

./: .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
Formula/: actions-toolkit.rb
backend/: .env.example  Cargo.toml  build.rs
backend/src/: app.rs  config.rs  error.rs  telemetry.rs
backend/src/api/: analytics.rs  github_proxy.rs  static_files.rs  webhooks.rs
backend/src/auth/: middleware.rs
backend/src/crypto/: mod.rs
backend/src/github/: client.rs  releases.rs  webhook_verify.rs
backend/src/runner/: artifact_capture.rs  log_stream.rs  workspace.rs
backend/src/workflow/: model.rs  trigger_match.rs
core/: Cargo.toml  build.rs
core/migrations/: 0008_indexes.sql
core/src/: app.rs  config.rs  error.rs  main.rs  net.rs  tailscale.rs  tunnel.rs
core/src/agent/: mod.rs
core/src/api/: agents.rs  analytics.rs  artifacts.rs  github_account.rs  github_oauth.rs  github_proxy.rs  mod.rs  repos.rs  runs.rs  runstats.rs  secrets.rs  settings.rs  static_files.rs  webhooks.rs  workflows.rs
core/src/auth/: handlers.rs  login_flow.rs  middleware.rs  mod.rs
core/src/bucket/: bucket_init.rs  mod.rs  reaper.rs
core/src/github/: actions.rs  checkout.rs  client.rs  hooks.rs  issues.rs  mod.rs
core/src/runner/: activity_hub.rs  artifact_capture.rs  bucket_server.rs  dispatch.rs  docker.rs  executor.rs  github_status.rs  mod.rs  poll_sync.rs  rcp_protocol.rs  run_client.rs  sampler.rs  scheduler.rs  shell_run.rs  stats_hub.rs
core/src/workflow/: yaml.rs
core/src/ws/: mod.rs
crates/atk-auth/: Cargo.toml
crates/atk-auth/src/: lib.rs  password.rs  rate_limit.rs
crates/atk-bucket/: Cargo.toml
crates/atk-bucket/src/: bucket_init.rs  lib.rs  linux.rs  reaper.rs  sandbox_init.rs  seccomp_policy.rs  shard_init.rs  windows.rs
crates/atk-config/: Cargo.toml
crates/atk-config/src/: lib.rs
crates/atk-crypto/: Cargo.toml
crates/atk-crypto/src/: lib.rs
crates/atk-db/: Cargo.toml  build.rs
crates/atk-db/migrations/: 0002_repos_and_credentials.sql  0004_runs.sql  0005_logs.sql  0015_secrets.sql  0016_bucket_settings.sql  0017_repo_last_synced_release.sql  0018_settings_public_url.sql  0019_run_webhook_event_id.sql  0020_repo_cascade_fk.sql  0021_rename_buckets_to_job_sandboxes.sql  0022_buckets.sql  0023_shells.sql  0024_job_sandboxes_shell_id.sql  0025_bucket_resource_cache.sql  0026_agents.sql  0027_agent_join_tokens.sql  0028_agent_auth_token.sql  0029_shells_spec_json.sql  0030_rename_job_sandboxes_to_shards.sql  0031_resource_samples.sql  0032_shells_cache_counters.sql  0033_github_accounts.sql
crates/atk-db/src/: models.rs
crates/atk-db/src/queries/: agent_join_tokens.rs  agents.rs  artifacts.rs  buckets.rs  github_token.rs  job_sandboxes.rs  login_events.rs  mod.rs  repos.rs  resource_cache.rs  resource_samples.rs  runs.rs  secrets.rs  settings.rs  shards.rs  shells.rs  users.rs  webhook_events.rs  whitelist.rs  workflows.rs
crates/atk-github/: Cargo.toml
crates/atk-github/src/: checks.rs  discovery.rs  lib.rs  oauth.rs  status.rs
crates/atk-rcp/: Cargo.toml
crates/atk-rcp/src/: framing.rs  lib.rs  local.rs  tcp.rs
crates/atk-workflow/: Cargo.toml
crates/atk-workflow/src/: model.rs
docs/: ARCHITECTURE.md  README.md  RELEASING.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: index.css
frontend/src/api/: artifacts.ts  github.ts  workflows.ts
frontend/src/builder/: WorkflowBuilder.tsx
frontend/src/hooks/: useRepos.ts
frontend/src/pages/: ArtifactsPage.tsx  DashboardPage.tsx  (+3 more)
mcp/: README.md
migrations/: 0001_init.sql  0003_workflows.sql  0006_artifacts.sql  0007_webhook_events.sql  0009_global_github_token.sql  0010_settings.sql  0011_buckets.sql  0012_workflow_description.sql  0013_github_app_tokens.sql  0014_repo_github_hook_id.sql
scripts/: bump-formula.sh  scan-for-secrets.sh
src/: app.rs  config.rs  main.rs
src/api/: artifacts.rs  github_account.rs  github_oauth.rs  github_proxy.rs  mod.rs  repos.rs  runs.rs  settings.rs  static_files.rs  workflows.rs
src/auth/: handlers.rs  jwt.rs
src/bucket/: bucket_init.rs  linux.rs  mod.rs  windows.rs
src/crypto/: mod.rs
src/db/: mod.rs  models.rs
src/github/: client.rs  discovery.rs  hooks.rs  mod.rs  oauth.rs
src/runner/: artifact_capture.rs  dispatch.rs  docker.rs  executor.rs  mod.rs  scheduler.rs
src/workflow/: expr.rs  mod.rs  model.rs  trigger_match.rs  validate.rs
src/ws/: mod.rs
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  index.css  main.tsx  routes.tsx
(+148 files in other folders)
