[package]
name = "atk-bucket"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
atk-config = { path = "../atk-config" }
atk-db = { path = "../atk-db" }

anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid", "migrate"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["mount", "sched", "process", "fs", "user", "signal"] }
caps = "0.5"
seccompiler = "0.4"
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Isolation",
    "Win32_Storage_FileSystem",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_System_Memory",
] }
