[package]
name = "atk-github"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws", "macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.19"
hex = "0.4"
hmac = "0.12"
octocrab = "0.44"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
