[package]
name = "atk-rcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "rt", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
tokio = { version = "1", features = ["net"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
